# rustFrida

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.py
.cargo/: config.toml
agent/: build.rs
agent/src/: crash_handler.rs  hide_soinfo.c  lib.rs  router.rs  stalker.rs  trace.rs
agent/src/engine/: arm64_relocator.rs  exec_mem.rs  mod.rs  recompiler.rs  stalker.rs
agent/src/engine/trace/: arm64_analysis.rs  ptrace_ops.rs  transformer.rs
agent/src/features/: memory_dump.rs  mod.rs  quickjs_loader.rs
agent/src/net/: communication.rs
agent/src/sys/: crash_handler.rs  mod.rs
docs/api/: builtins.md  globals.md  java_hook.md  jni_api.md  native_hook.md  qbdi.md
examples/: README.md  java_hook_example.js  jni_monitor_example.js  native_hook_example.js  qbdi_trace_example.js
ldmonitor/: Cargo.toml  build.rs
ldmonitor-common/: Cargo.toml
ldmonitor-common/src/: lib.rs
ldmonitor-ebpf/: build.rs
ldmonitor-kpm/: Makefile  Original.md  README.md  build.py  kpm-dlopen-monitor.c  make.bat
ldmonitor-kpm/template/: module.prop  service.sh
ldmonitor/src/: lib.rs
loader/: build_helpers.py
qbdi-helper/: build.rs
quickjs-hook/: Cargo.toml  build.rs
quickjs-hook/native/lsplant_core/: CMakeLists.txt  lsplant.cc
quickjs-hook/native/lsplant_core/include/: lsplant.hpp  rf_lsplant.h
quickjs-hook/native/lsplant_core/src/: rf_lsplant_entry.cc
quickjs-hook/src/: hook_engine_mem.c  lib.rs
quickjs-hook/src/jsapi/: hook_api.rs  memory.rs
quickjs-hook/src/jsapi/hook_api/: callback.rs  functions.rs
quickjs-hook/src/jsapi/java/: art_controller.rs  callback.rs  java_boot.js  java_field_api.rs  jni_core.rs  mod.rs  reflect.rs
quickjs-hook/src/jsapi/java/art_method/: resolution.rs
quickjs-hook/src/jsapi/java/callback/: hook.rs  lsplant.rs  mod.rs  original_call.rs  registry.rs
quickjs-hook/src/jsapi/java/java_hook_api/: install.rs  uninstall.rs
quickjs-hook/src/lsplant_bridge/: ffi.rs  mod.rs
quickjs-hook/src/recomp/: mod.rs
rust_frida/: Cargo.toml
rust_frida-ebpf/: Cargo.toml  README.md  build.bat
rust_frida-ebpf/src/: main.rs
rust_frida/src/: args.rs  communication.rs  ebpf_dlopen.rs  injection.rs  kpm.rs  logger.rs  main.rs  process.rs  props.rs  repl.rs  runner.rs  selinux.rs  server.rs  session.rs  spawn.rs
scripts/: attach_test.js  gate_probe.js  setup_cargo_config.py  spawn_test.js
testapp/: settings.gradle
testapp/app/: build.gradle  release.jks
testapp/app/src/androidTest/java/com/asmzhang/testapp/: ExampleInstrumentedTest.java
testapp/app/src/main/: AndroidManifest.xml
testapp/app/src/main/cpp/: native-lib.cpp
testapp/app/src/main/java/com/asmzhang/testapp/: MainActivity.java  TestAppApplication.java
testapp/app/src/test/java/com/asmzhang/testapp/: ExampleUnitTest.java
testapp/gradle/wrapper/: gradle-wrapper.properties
