[workspace]
resolver = "2"
members = [
    "frida-gum-sys",
    "frida-gum",
    "rust_frida",
    "agent",
    "qbdi-helper",
    "ldmonitor",
    "ldmonitor-common",
    "qbdi",
    "quickjs-hook"
]
# We miss our linux_no_std example from the default members since `cargo check`
# and `cargo test` both attempt to link the `std` library into it in error.
default-members = ["frida-gum-sys", "frida-gum", "rust_frida", "agent"]

[workspace.package]
version = "0.16.10"
authors = [
    "Keegan Saunders <keegan@undefinedbehaviour.org>",
    "Shmarya Rubenstein <github@shmarya.net>",
]
edition = "2021"
license = "wxWindows"
repository = "https://github.com/frida/frida-rust"
description = "Rust bindings for Frida"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
cargo_metadata = "0.19"
clap = "4"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
tokio = "1"
which = "7"

[profile.release]
strip = true

panic = "abort"          # 禁止异常展开，消除 panic 回溯路径与冗余机制
lto = true               # 开启链接时优化，剥除跨模块调用图和无用代码
opt-level = "z"          # 优化体积，混淆普通优化特征
codegen-units = 1        # 极限单包编译，提升 lto 精度并减少中间生成物碎片

[profile.dev]
strip = false
debug = 2
