[package]
name = "ldmonitor"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
ldmonitor-common = { path = "../ldmonitor-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
    "process",
    "io-util",
] }
clap = { workspace = true, features = ["derive"] }

#[lib]
#name = "ldmonitor"
#path = "src/lib.rs"

[[bin]]
name = "ldmonitor"
path = "src/main.rs"
